# mergefunc-mergereturn

MojMergefuncPass/: MojMergefuncPass.cpp
MojMergefuncPass/test-primeri/: input3.ll  output2.ll  output3.ll
MojMergefuncpass/: CMakeLists.txt  MojMergefuncPass.cpp
MojMergefuncpass/test-primeri/: input1.ll  input2.ll  output1.ll
mergereturn/MojMergeReturnPass/: CMakeLists.txt  MojMergeReturnPass.cpp
mergereturn/mergereturn_primeri/: primer.c  primer_projekat.ll  primer_projekat_mod.ll
